--- a/2. Contracts/inbox/package.json
+++ b/2. Contracts/inbox/package.json
@@ -13,7 +13,7 @@
     "dotenv": "^15.0.0",
     "ganache-cli": "^6.12.2",
     "mocha": "^9.1.2",
-    "solc": "0.4.17",
+    "solc": "^0.8.11",
     "web3": "^1.6.0"
   }
 }
